fix css to for element to be hidden by visibility

--- a/frontend/src/shared/ui/Sidebar/ui/SidebarItem/SidebarItem.module.scss
+++ b/frontend/src/shared/ui/Sidebar/ui/SidebarItem/SidebarItem.module.scss
@@ -14,15 +14,15 @@
 }
 
 .link {
-  opacity: 1;
+  visibility: visible;
   margin-left: 20px;
-  transition: opacity 0.4s ease-in-out, width 0.4s ease-in-out;
+  transition: visibility 0.4s ease-in-out, width 0.4s ease-in-out;
 }
 
 .collapsed {
   .link {
-    opacity: 0;
+    visibility: hidden;
     width: 0;
-    transition: opacity 0.4s ease-out, width 0.4s ease-out;
+    transition: visibility 0.4s ease-out, width 0.4s ease-out;
   }
 }
